--- a/portfolio.html
+++ b/portfolio.html
@@ -306,6 +306,20 @@
                 </li>
               </ul>
         </div>
+         <div class="footer-flex-item">
+          <p class="footer-join">Подпишитесь на рассылку</p>
+          <form class="form-sign-up">
+            <label class="footer-email-label">
+              <input class="footer-form-email" type="email" name="user-email" id="" placeholder="E-mail">
+            </label>
+            <button class="footer-form-btn" type="submit">
+              <span class="sign-up">Подписаться</span>
+              <svg class="clients-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-sendmail"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
