Revert "Update index.html"
This reverts commit cbf5478d1c2843ef626539eaa16908efde601e0e.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
         <ul class="contacts list">
           <li class="contacts-item">
             <a class="contacts-link" href="mailto:info@devstudio.com"
-              ><svg class="contacs-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg>info@devstudio.com</a
+              ><svg class="contacs-icon" width="16" height="12"><use href="./images/icons.svg#icon-envelope"></svg>info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"><svg class="contacs-icon" width="10" height="16"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+            <a class="contacts-link" href="tel:+380961111111"><svg class="contacs-icon" width="10" height="16"><use href="./images/icons.svg#icon-smartphone"></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -88,7 +86,7 @@
                 </label>
                 <label class="modal-textarea">        
                   <span class="modal-input-label">Комментарий</span>          
-                  <textarea class="comment-textarea" name="comment" rows="5" placeholder="Введите текст"></textarea>                                  
+                  <textarea class="comment-textarea" name="comment" id="" rows="5" placeholder="Введите текст"></textarea>                                  
                 </label>
                 <label class="modal-agreement">  
                   <input class="checkbox-original visually-hidden" type="checkbox" name="agrement" >
@@ -98,11 +96,12 @@
                     </svg>  -->
                   </span>
                   
-                  <span class="text-agrement">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
+                  <p class="text-agrement">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
                 </label>
                 <button class="modal-submit" type="submit">Отправить</button>
               </form>
-            </div>                        
+            </div>
+            </div>            
           </div>
         </div>
       </section>
