--- a/portfolio.html
+++ b/portfolio.html
@@ -35,14 +35,22 @@
             </li>
           </ul>
         </nav>
-         <ul class="contacts list">
+        <ul class="contacts list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              ><svg class="contacs-icon" width="16" height="12"><use href="./images/icons.svg#icon-envelope"></svg>info@devstudio.com</a
+            <a class="contacts-link" href="mailto:info@devstudio.com">
+              <svg class="contacs-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"><svg class="contacs-icon" width="10" height="16"><use href="./images/icons.svg#icon-smartphone"></svg>+38 096 111 11 11</a>
+            <a class="contacts-link" href="tel:+380961111111">
+              <svg class="contacs-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -69,39 +77,43 @@
             </li>
           </ul>
           <ul class="list portfolio-list">
-            <li class="portfolio-item">              
-                <a class="portfolio-link" href="">
-                  <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                    <img
+            <li class="portfolio-item">
+              <a class="portfolio-link" href="">
+                <div class="slider">
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
                     class="portfolio-foto"
                     src="./images/portfolio/portfolio1.jpg"
                     alt="примеры работ Технокряк"
                     width="370"
                     height="294"
-                    />
-                 </div>
-                 <div class="item-text">
-                    <h2 class="work-title">Технокряк</h2>
-                    <p class="work-description">Веб-сайт</p>
-                 </div>
+                  />
+                </div>
+                <div class="item-text">
+                  <h2 class="work-title">Технокряк</h2>
+                  <p class="work-description">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio2.jpg"
-                  alt="примеры работ Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio2.jpg"
+                    alt="примеры работ Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 class="work-title">
@@ -114,16 +126,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio3.jpg"
-                  alt="примеры работ Ресторан Seafood"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio3.jpg"
+                    alt="примеры работ Ресторан Seafood"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 class="work-title">Ресторан <span lang="en">Seafood</span></h2>
@@ -134,16 +148,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio4.jpg"
-                  alt="примеры работ Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio4.jpg"
+                    alt="примеры работ Проект Prime"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 class="work-title">Проект <span lang="en">Prime</span></h2>
@@ -154,16 +170,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio5.jpg"
-                  alt="примеры работ Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio5.jpg"
+                    alt="примеры работ Проект Boxes"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 class="work-title">Проект <span lang="en">Boxes</span></h2>
@@ -174,16 +192,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio6.jpg"
-                  alt="примеры работ Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio6.jpg"
+                    alt="примеры работ Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 lang="en" class="work-title">Inspiration has no Borders</h2>
@@ -194,16 +214,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio7.jpg"
-                  alt="примеры работ Издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio7.jpg"
+                    alt="примеры работ Издание Limited Edition"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 class="work-title">Издание <span lang="en">Limited Edition</span></h2>
@@ -214,16 +236,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio8.jpg"
-                  alt="примеры работ Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio8.jpg"
+                    alt="примеры работ Проект LAB"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 class="work-title">Проект <span lang="en">LAB</span></h2>
@@ -234,16 +258,18 @@
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="slider">
-                   <p class="slider-text">Ресурс предлагает комплексные предложения с разным уровнем 
-                    функционала и сервисов. Все это позволит посетителю получить 
-                    исчерпывающие сведения о компании или частном лице</p>
-                <img
-                  class="portfolio-foto"
-                  src="./images/portfolio/portfolio9.jpg"
-                  alt="примеры работ Growing Business"
-                  width="370"
-                  height="294"
-                />
+                  <p class="slider-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице
+                  </p>
+                  <img
+                    class="portfolio-foto"
+                    src="./images/portfolio/portfolio9.jpg"
+                    alt="примеры работ Growing Business"
+                    width="370"
+                    height="294"
+                  />
                 </div>
                 <div class="item-text">
                   <h2 lang="en" class="work-title">Growing Business</h2>
@@ -256,7 +282,7 @@
       </section>
     </main>
     <footer class="footer">
-     <div class="container flex-container">
+      <div class="container flex-container">
         <div class="footer-flex-item">
           <a class="logo footer-logo-link" href="./index.html"
             >Web<span class="footer-logo">Studio</span></a
@@ -276,41 +302,46 @@
         <div class="footer-flex-item">
           <h3 class="footer-join">Присоединяйтесь</h3>
           <ul class="list socials">
-                <li class="socials-item">
-                  <a class="socials-link footer-socials" href="" aria-label="Instagram">
-                    <svg class="socials-item" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>        
-                  </a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link footer-socials" href="" aria-label="Twitter">
-                    <svg class="socials-item" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>        
-                  </a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link footer-socials" href="" aria-label="Facebook">
-                    <svg class="socials-item" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>        
-                  </a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link footer-socials" href="" aria-label="LinkedIn">
-                    <svg class="socials-item" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>        
-                  </a>
-                </li>
-              </ul>
+            <li class="socials-item">
+              <a class="socials-link footer-socials" href="" aria-label="Instagram">
+                <svg class="socials-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link footer-socials" href="" aria-label="Twitter">
+                <svg class="socials-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link footer-socials" href="" aria-label="Facebook">
+                <svg class="socials-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link footer-socials" href="" aria-label="LinkedIn">
+                <svg class="socials-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
-         <div class="footer-flex-item">
+        <div class="footer-flex-item">
           <p class="footer-join">Подпишитесь на рассылку</p>
           <form class="form-sign-up">
             <label class="footer-email-label">
-              <input class="footer-form-email" type="email" name="user-email" id="" placeholder="E-mail">
+              <input
+                class="footer-form-email"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
             </label>
             <button class="footer-form-btn" type="submit">
               <span class="sign-up">Подписаться</span>
